WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246783
Throw a DataCloneError when attempting to serialize an ImageBitmap without the origin-clean flag.
https://bugs.webkit.org/show_bug.cgi?id=246783
Summary
Throw a DataCloneError when attempting to serialize an ImageBitmap without th...
Matt Woodrow
Reported
2022-10-19 17:27:58 PDT
The HTML spec expects us to reject serialization/transfer of ImageBitmaps that don't have the origin-clean flag, rather than tansferring them and tainting any <canvas> elements they get drawn to.
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2022-10-19 17:28:10 PDT
<
rdar://problem/100901435
>
Matt Woodrow
Comment 2
2022-10-19 17:31:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5571
EWS
Comment 3
2022-10-22 12:01:39 PDT
Committed
255882@main
(ad6383440b73): <
https://commits.webkit.org/255882@main
> Reviewed commits have been landed. Closing PR #5571 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug