Source/WebCore/bindings/js/SerializedScriptValue.cpp
@@ -1101,8 +1101,12 @@ private:
         }
 
         auto& imageBitmap = jsCast<JSImageBitmap*>(obj)->wrapped();
-        auto* buffer = imageBitmap.buffer();
+        if (!imageBitmap.originClean()) {
+            code = SerializationReturnCode::DataCloneError;
+            return;
+        }
 
+        auto* buffer = imageBitmap.buffer();
         if (!buffer) {
             code = SerializationReturnCode::ValidationError;
             return;
@@ -4345,6 +4349,8 @@ ExceptionOr<Ref<SerializedScriptValue>> SerializedScriptValue::create(JSGlobalOb
 
         if (auto imageBitmap = JSImageBitmap::toWrapped(vm, transferable.get())) {
             if (imageBitmap->isDetached())
+                return Exception { DataCloneError };
+            if (!imageBitmap->originClean())
                 return Exception { DataCloneError };
 
             imageBitmaps.append(WTFMove(imageBitmap));
